--- a/proxpatch/Cargo.toml
+++ b/proxpatch/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
-tokio = { version = "1", features = ["full"] }
+env_logger = "0.11"
+once_cell = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml = "0.9"
-once_cell = "1"
+systemd-journal-logger = "2"
+tokio = { version = "1", features = ["full"] }
+log = "0.4"
